syntax = "proto3";

option java_multiple_files = true;

package grpc;

service UserService {
  rpc newUser (NewUserRequest) returns (NewUserResponse) {}
}

message NewUserRequest {
  string name = 1;
  string email = 2;
}

message NewUserResponse {
  string message = 1;
}
